2006-05-30  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpdataeditor.c (gimp_data_editor_name_activate)
	* app/widgets/gimpdatafactoryview.c
	(gimp_data_factory_view_tree_name_edited): strip the newly
	entered name from whitespace and reject empty names.

2006-05-30  Manish Singh  <yosh@gimp.org>

	* app/batch.c (batch_run): GIMP_BATCH_INTERPRETER can be set in
	the environment to override the default batch interpreter procedure.

	* plug-ins/pygimp/plug-ins/happy-valley-relief.py: basic python
	code evaluator function.

	* plug-ins/pygimp/plug-ins/Makefile.am: add above file.

2006-05-30  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpfu.py: Other code places should allow
	menu paths to be None too.

2006-05-30  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpfu.py: Allow menu paths to be None.

2006-05-30  Manish Singh  <yosh@gimp.org>

	* app/file/gimprecentlist.c: #define _GNU_SOURCE instead of
	_SVID_SOURCE, so we get all the declarations we need. Fixes
	bug #342390.

2006-05-29  Manish Singh  <yosh@gimp.org>

	* libgimpwidgets/gimpchainbutton.c
	* libgimpwidgets/gimppixmap.c: #include "config.h"

2006-05-29  Manish Singh  <yosh@gimp.org>

	* app/errors.c
	* app/main.c
	* app/file/gimprecentlist.c
	* libgimp/gimp.c
	* libgimpbase/gimpsignal.c
	* modules/cdisplay_lcms.c
	* modules/cdisplay_proof.c
	* modules/controller_midi.c
	* plug-ins/common/gqbist.c
	* plug-ins/metadata/xmp-schemas.h: miscellaneous fixes for building
	with -ansi -pedantic. Mostly #define _FOO_SOURCE stuff. Thanks to
	Daniel Richard G. for the patch. Fixes bug #342390.

2006-05-30  Tor Lillqvist  <tml@novell.com>

	* libgimpwidgets/gimpwidgets.def: Sync.

2006-05-29  Sven Neumann  <sven@gimp.org>

	* configure.in: use PANGO_DISABLE_DEPRECATED for pango < 0.13.0.

	* app/text/gimptext-vectors.c: added const qualifiers to the
	FT_Vector parameters of the FT_Outline_Funcs.

2006-05-29  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdialogfactory.c